<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCurrentPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_position"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/tvInitialPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_position"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentPosition"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInitialPosition"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/tvCompassAngle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compass_angle"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDistance"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/btnMarkPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mark_position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCompassAngle"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMarkPosition"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>